<resources>
    <string name="app_name">EMPRESAS</string>
    <string name="app_title">BEM VINDO \nAO EMPRESAS</string>
    <string name="app_subtitle">Lorem ipsum dolor sit amet, contetur adipiscing elit. Nunc accumsan.</string>
    <string name="company_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="password">Senha</string>
    <string name="email">E-mail</string>
    <string name="sign_in">ENTRAR</string>
    <string name="pass_required">A senha é obrigatória</string>
    <string name="email_required">O E-mail é obrigatório</string>
    <string name="email_invalid">Email inválido, ex: abc@exemplo.com</string>
    <string name="login_failed">O login falhou</string>
    <string name="invalid_credentials">Credenciais informadas são inválidas, tente novamente.</string>
    <string name="search">Pesquisar</string>
    <string name="click_to_search">Clique na busca para iniciar.</string>
    <string name="loading_search">Buscando empresas</string>
    <string name="no_results">Nenhuma empresa foi encontrada para a busca realizada.</string>
    <string name="menu_open">Menu aberto</string>
    <string name="menu_close">Menu fechado</string>
    <string name="favorites">Favoritos</string>
    <string name="logout">Sair</string>
    <string name="about">Sobre</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="cancel">Cancelar</string>
    <string name="alert_dialog_fav_title">Favoritos</string>
    <string name="alert_dialog_fav_add">Você deseja salvar <b>%1$s</b> nos seus favoritos?</string>
    <string name="alert_dialog_fav_delete">Você deseja remover <b>%1$s</b> dos seus favoritos?</string>
    <string name="added_to_fav">A empresa foi adicionada aos seus favoritos</string>
    <string name="remove_from_fav">A empresa foi removida dos seus favoritos</string>
    <string name="country">País</string>
    <string name="type">Tipo</string>
    <string name="enterprise_name">Nome da Empresa</string>
    <string name="forgot_password_question"><u>Esqueceu a senha?</u></string>

</resources>