<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="@layout/fragment_company_list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/company_card"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="8dp"
    android:padding="11dp"
    android:clickable="true"
    android:focusable="true"
    android:longClickable="true">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/company_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/company_img"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:gravity="center_vertical"
        tools:ignore="RtlSymmetry">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/company_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:singleLine="true"
            android:text="@string/enterprise_name"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/company_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/company_name"
            android:text="@string/type"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/company_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/company_type"
            android:text="@string/country"/>

        <ImageView
            android:id="@+id/company_fav_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:src="@drawable/ic_favorite_30"
            app:tint="@color/rouge"
            android:visibility="gone"
            tools:ignore="ContentDescription" />

    </RelativeLayout>

</androidx.appcompat.widget.LinearLayoutCompat>
