<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    tools:context=".ui.LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="71dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="70dp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/home_logo"
        android:layout_width="184dp"
        android:layout_height="48dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/logo_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/home_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal"
        android:text="@string/app_title"
        android:textColor="#383743"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_logo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/home_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal"
        android:text="@string/app_subtitle"
        android:textColor="#383743"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/home_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_email_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        app:layout_constraintTop_toBottomOf="@id/home_subtitle"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        app:boxStrokeColor="@color/charcoal_grey"
        app:hintEnabled="false" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_email_input_text"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@android:color/transparent"
            android:padding="0dp"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="5dp"
            android:textColor="@color/charcoal_grey"
            android:textColorHint="@color/charcoal_grey"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:singleLine="true"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_pass_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_email_input_layout"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        app:boxStrokeColor="@color/charcoal_grey"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/charcoal_grey">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_pass_input_text"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@android:color/transparent"
            android:padding="0dp"
            android:drawableStart="@drawable/ic_chain"
            android:drawablePadding="5dp"
            android:textColor="@color/charcoal_grey"
            android:textColorHint="@color/charcoal_grey"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_submit"
        android:layout_width="270dp"
        android:layout_height="44dp"
        android:layout_marginTop="30dp"
        android:background="#57bbbc"
        android:radius="5dp"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_pass_input_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>